# warp_drive

./: .gitignore  README.md  manage.py  pyproject.toml  test_data.ipynb  test_queries.ipynb
csvs/: admin.py  forms.py  models.py  urls.py  views.py
csvs/migrations/: 0001_initial.py
propellers/: admin.py  apps.py  forms.py  import_data.py  models.py  plots.py  urls.py  utils.py  views.py
propellers/migrations/: 0001_initial.py  0002_auto_20210413_1909.py  0003_engine.py  0004_propeller.py
propellers/static/: test_Vehicles.xlsx
propellers/static/css/: style.css
propellers/static/js/: main.js  results.js  search_wait.js
templates/: base.html
templates/csvs/: upload.html
templates/partials/: _alerts.html  _footer.html  _navbar.html
templates/propellers/: databases.html  engines.html  home.html  overall_stats.html  propellers.html  results.html  search.html  upload.html  upload_engines.html  upload_propellers.html  upload_vehicles.html  vehicles.html
warp_drive/: asgi.py  settings.py  urls.py  wsgi.py
